--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,30 +1,114 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+
+:root {
+  --color-gray-50: hsl(210deg, 19%, 10%);
+  --color-gray-100: hsl(210deg, 15%, 20%);
+  --color-gray-200: hsl(210deg, 15%, 25%);
+  --color-gray-300: hsl(210deg, 10%, 40%);
+  --color-gray-400: hsl(210deg, 9%, 45%);
+  --color-gray-500: hsl(210deg, 8%, 50%);
+  --color-gray-600: hsl(210deg, 12%, 55%);
+  --color-gray-700: hsl(210deg, 14%, 66%);
+  --color-gray-800: hsl(210deg, 20%, 77%);
+  --color-gray-900: hsl(210deg, 25%, 88%);
+  --color-gray-1000: hsl(210deg, 25%, 96%);
+}
+
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+
+/*
+  3. Allow percentage-based heights in the application
+*/
+html, body {
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
+}
+
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/*
+  6. Improve media defaults
+*/
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+/*
+  7. Remove built-in form typography styles
+*/
+input, button, textarea, select {
+  font: inherit;
+}
+
+/*
+  8. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
+
+
 .order-enter {
   transform: translateX(-120%) rotate(0);
   transition: 0.5s;
   max-height: 0;
   padding: 0 !important;
 }
+
 .order-enter.order-enter-active {
   transform: translateX(0) rotate(1440deg);
   max-height: 60px;
   padding: 2rem 0 !important;
 }
+
 .order-exit {
   transform: translateX(0);
   transition: 0.5s;
 }
+
 .order-exit.order-exit-active {
   transform: translateX(120%);
   padding: 0;
 }
+
 .count-enter {
   transform: translateY(100%) !important;
   transition: 0.5s;
 }
+
 .count-enter.count-enter-active {
   transform: translateY(0) !important;
 }
-@font-face {
+
+/* @font-face {
   font-family: "haymakerregular";
   src: url("./fonts/haymaker-webfont.eot");
   src: url("./fonts/haymaker-webfont.eot?#iefix") format("embedded-opentype"), url("./fonts/haymaker-webfont.woff") format("woff"), url("./fonts/haymaker-webfont.ttf") format("truetype"), url("./fonts/haymaker-webfont.svg#haymakerregular") format("svg");
@@ -37,8 +121,8 @@
   src: url("./fonts/blanch_caps_inline-webfont.eot?#iefix") format('embedded-opentype'), url("./fonts/blanch_caps_inline-webfont.woff") format('woff'), url("./fonts/blanch_caps_inline-webfont.ttf") format('truetype'), url("./fonts/blanch_caps_inline-webfont.svg#blanchcaps_inline") format('svg');
   font-weight: normal;
   font-style: normal;
-}
-article,
+} */
+/* article,
 aside,
 details,
 figcaption,
@@ -50,48 +134,60 @@ nav,
 section,
 summary {
   display: block;
-}
+} */
+
 audio,
 canvas,
 video {
   display: inline-block;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 [hidden] {
   display: none;
 }
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
+
 a:focus {
   outline: thin dotted;
 }
+
 a:active,
 a:hover {
   outline: 0;
 }
+
 h1 {
   font-size: 2em;
 }
+
 abbr[title] {
   border-bottom: 1px dotted;
 }
+
 b,
 strong {
   font-weight: 700;
 }
+
 dfn {
   font-style: italic;
 }
+
 mark {
-  background: #ff0;
-  color: #000;
+  background: var(--color-gray-100);
+  color: var(--color-gray-500);
 }
+
 code,
 kbd,
 pre,
@@ -99,16 +195,20 @@ samp {
   font-family: monospace, serif;
   font-size: 1em;
 }
+
 pre {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
 q {
   quotes: 2 1C 2 1D 2 18 2 19;
 }
+
 small {
   font-size: 80%;
 }
+
 sub,
 sup {
   font-size: 75%;
@@ -116,23 +216,29 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
+
 sup {
   top: -0.5em;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 img {
   border: 0;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
+
 button,
 input,
 select,
@@ -141,10 +247,12 @@ textarea {
   font-size: 100%;
   margin: 0;
 }
+
 button,
 input {
   line-height: normal;
 }
+
 button,
 html input[type=button],
 input[type=reset],
@@ -152,41 +260,50 @@ input[type=submit] {
   -webkit-appearance: button;
   cursor: pointer;
 }
+
 button[disabled],
 input[disabled] {
   cursor: default;
 }
+
 input[type=checkbox],
 input[type=radio] {
   box-sizing: border-box;
   padding: 0;
 }
+
 input[type=search] {
   -webkit-appearance: textfield;
   box-sizing: content-box;
 }
+
 input[type=search]::-webkit-search-cancel-button,
 input[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 textarea {
   overflow: auto;
   vertical-align: top;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 body,
 figure {
   margin: 0;
 }
+
 legend,
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
+
 .clearfix:after {
   visibility: hidden;
   display: block;
@@ -195,12 +312,15 @@ input::-moz-focus-inner {
   clear: both;
   height: 0;
 }
+
 * {
   box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   background: #d4d4d4;
   -webkit-font-smoothing: antialiased;
@@ -208,12 +328,14 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 2rem;
 }
+
 h1 {
   font-family: 'blanchcaps_inline', sans-serif;
   text-align: center;
   font-weight: normal;
   margin: 0;
 }
+
 h2,
 h3,
 h4,
@@ -222,24 +344,35 @@ h6 {
   font-weight: normal;
   font-family: 'haymakerregular', sans-serif;
 }
+
 h2 {
   text-align: center;
   margin-top: 0;
   margin-bottom: 2rem;
 }
+
 h3 {
   font-size: 3rem;
 }
+
 header.top {
   text-align: center;
 }
-header.top h1 {
-  font-size: 14.4rem;
+
+header.top h2 {
+  /* font-size: 2.4rem; */
   line-height: 0.7;
+  text-transform: capitalize;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
+  padding: 15px 0;
+  color: var(--color-gray-1000);
+  background: var(--color-gray-800);
+  border: 4px solid var(--color-gray-100);
 }
-header.top h1 .ofThe {
+
+/* header.top h1 .ofThe {
   display: flex;
   font-size: 3rem;
   color: #f5a623;
@@ -249,11 +382,13 @@ header.top h1 .ofThe {
   background-size: cover;
   padding: 0 1rem;
 }
+
 header.top h1 .ofThe .of {
   padding-right: 2rem;
   position: relative;
   right: -0.5rem;
 }
+
 header.top h3 {
   margin: 0;
   font-size: 2rem;
@@ -261,6 +396,7 @@ header.top h3 {
   position: relative;
   display: inline-block;
 }
+
 header.top h3 span {
   background: #fff;
   position: relative;
@@ -268,11 +404,12 @@ header.top h3 span {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
 header.top h3:before,
 header.top h3:after {
   display: block;
   z-index: 1;
-  background: #000;
+  background: var(--color-gray-300);
   position: absolute;
   width: 130%;
   height: 1px;
@@ -280,10 +417,12 @@ header.top h3:after {
   top: 5px;
   margin-left: -15%;
 }
+
 header.top h3:after {
   top: auto;
   bottom: 7px;
-}
+} */
+
 .catch-of-the-day {
   display: flex;
   height: 90vh;
@@ -293,110 +432,135 @@ header.top h3:after {
   perspective: 1000px;
   transform-style: preserve-3d;
 }
-.catch-of-the-day > * {
+
+.catch-of-the-day>* {
   flex: 1 4 auto;
   padding: 2rem;
-  border: 1rem double #1a1a1a;
+  /* border: 1rem double var(--color-gray-100); */
   position: relative;
-  background: #fff;
+  border: 4px solid var(--color-gray-100);
+  /* background: var(--color-gray-800); */
+  color: var(--color-gray-1000);
+  background: var(--color-gray-800);
   transition: all 0.3s;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   overflow: scroll;
 }
-.catch-of-the-day > *:first-child {
+
+.catch-of-the-day>*:first-child {
   flex-shrink: 1;
   flex-basis: 50%;
   transform: translateX(50%) rotateY(6deg) translateX(-50%);
 }
-.catch-of-the-day > *:nth-child(2) {
+
+.catch-of-the-day>*:nth-child(2) {
   transform: translateX(-50%) rotateY(-14deg) translateX(50%);
   border-left: 0;
   border-right: 0;
   min-width: 300px;
 }
-.catch-of-the-day > *:last-child {
+
+.catch-of-the-day>*:last-child {
   flex-shrink: 1;
   flex-basis: 50%;
   transform: translateX(-50%) rotateY(10deg) translateX(50%) scale(1.08) translateX(24px);
 }
-input#fold:not(:checked) ~ #main .catch-of-the-day > * {
+
+input#fold:not(:checked)~#main .catch-of-the-day>* {
   transform: none;
 }
+
 label[for="fold"] {
   position: absolute;
   top: 1rem;
   left: 1rem;
   text-transform: uppercase;
   font-size: 1.3rem;
-  background: #000;
+  background: var(--color-gray-300);
   color: #fff;
-  border: 2px solid #000;
+  border: 2px solid var(--color-gray-300);
   cursor: pointer;
   padding: 0.5rem 1rem;
 }
+
 input#fold {
   display: none;
 }
-input#fold:checked + label {
-  background: #fff;
-  color: #000;
+
+input#fold:checked+label {
+  background: var(--color-gray-1000);
+  color: var(--color-gray-100);
 }
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 ul.order li {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--color-gray-300);
   padding: 2rem 0;
   display: flex;
   font-size: 1.4rem;
   justify-content: space-between;
   align-items: center;
 }
+
 ul.order li:hover button {
   display: inline;
 }
+
 ul.order li button {
   border: 0;
   display: none;
   line-height: 1;
   padding: 0;
 }
+
 ul.order li.unavailable {
   text-decoration: line-through;
   background: #f8d0d2;
 }
+
 ul.order li .price {
   font-size: 1.2rem;
 }
+
 ul.order li span.count {
   position: relative;
   overflow: hidden;
   float: left;
 }
+
 ul.order li span.count span {
   display: inline-block;
 }
+
 .total {
   padding: 2rem 0;
   font-size: 1.4rem;
-  border-bottom: 3px solid #000;
-  border-top: 3px double #000;
+  border-bottom: 3px solid var(--color-gray-300);
+  border-top: 3px double var(--color-gray-300);
 }
+
 .total strong {
   float: right;
 }
+
 .order-title {
   text-align: center;
 }
+
 .fish-edit {
   margin-bottom: 20px;
-  border: 2px solid #000;
+  border: 2px solid var(--color-gray-300);
+  background: var(--color-gray-900);
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
 }
+
 .fish-edit input,
 .fish-edit textarea,
 .fish-edit select {
@@ -405,69 +569,80 @@ ul.order li span.count span {
   line-height: 1;
   font-size: 1.2rem;
   border: 0;
-  border-bottom: 1px solid #000;
-  border-right: 1px solid #000;
+  border-bottom: 1px solid var(--color-gray-300);
+  border-right: 1px solid var(--color-gray-300);
   -webkit-appearance: none;
-          appearance: none;
+  appearance: none;
   border-radius: 0;
   background: #fff;
 }
+
 .fish-edit input:focus,
 .fish-edit textarea:focus,
 .fish-edit select:focus {
   outline: 0;
-  background: #fef2de;
+  background: var(--color-gray-700);
 }
+
 .fish-edit textarea {
   width: 100%;
 }
+
 .fish-edit input:last-of-type {
   width: 100%;
 }
+
 .fish-edit button {
   width: 100%;
   border: 0;
 }
+
 .list-of-fish {
-  border-top: 2px solid #000;
-  border-bottom: 1px solid #000;
+  border-top: 2px solid var(--color-gray-200);
+  border-bottom: 1px solid var(--color-gray-200);
   padding-top: 5px;
   margin-top: 2rem;
   transform: translateZ(0);
 }
+
 .menu-fish {
-  border-bottom: 2px solid #000;
-  border-top: 1px solid #000;
+  border-bottom: 6px solid var(--color-gray-200);
+  border-top: 3px solid var(--color-gray-200);
   padding-bottom: 2rem;
   padding-top: 2rem;
   margin-bottom: 5px;
   clear: both;
   overflow: hidden;
 }
+
 .menu-fish p {
   margin: 0;
   font-size: 1.8rem;
 }
+
 .menu-fish .fish-name {
   margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .menu-fish .price {
   font-size: 1.4rem;
   justify-content: flex-end;
 }
+
 .menu-fish img {
   float: left;
   width: 150px;
   margin-right: 1rem;
 }
+
 button,
 input[type=submit] {
   text-transform: uppercase;
   background: none;
-  border: 1px solid #000;
+  border: 1px solid var(--color-gray-300);
   font-weight: 600;
   font-size: 1.5rem;
   font-family: 'Open Sans', sans-serif;
@@ -475,6 +650,7 @@ input[type=submit] {
   position: relative;
   z-index: 2;
 }
+
 button[disabled],
 input[type=submit][disabled] {
   color: #d12028;
@@ -482,21 +658,24 @@ input[type=submit][disabled] {
   border-color: #d12028;
   transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
 }
+
 button[disabled]:hover,
 input[type=submit][disabled]:hover {
   color: #d12028;
   cursor: not-allowed;
 }
+
 button[disabled]:after,
 input[type=submit][disabled]:after {
   display: none;
 }
+
 button:after,
 input[type=submit]:after {
   content: '';
   z-index: -1;
   display: block;
-  background: #000;
+  background: var(--color-gray-300);
   position: absolute;
   width: 100%;
   height: 0;
@@ -504,6 +683,7 @@ input[type=submit]:after {
   top: 0;
   transition: all 0.2s;
 }
+
 button:hover,
 input[type=submit]:hover,
 button:focus,
@@ -511,20 +691,24 @@ input[type=submit]:focus {
   color: #fff;
   outline: 0;
 }
+
 button:hover:after,
 input[type=submit]:hover:after,
 button:focus:after,
 input[type=submit]:focus:after {
   height: 100%;
 }
+
 button.warning:after,
 input[type=submit].warning:after {
   background: #d12028;
 }
+
 button.success:after,
 input[type=submit].success:after {
   background: #2dc22d;
 }
+
 button.github,
 input[type=submit].github,
 button.facebook,
@@ -538,41 +722,50 @@ input[type=submit].twitter {
   color: #fff;
   padding: 2rem;
 }
+
 button.github,
 input[type=submit].github {
   background: #82d465;
 }
+
 button.github:after,
 input[type=submit].github:after {
   background: #5cc437;
 }
+
 button.facebook,
 input[type=submit].facebook {
   background: #3864a3;
 }
+
 button.facebook:after,
 input[type=submit].facebook:after {
   background: #2d5082;
 }
+
 button.twitter,
 input[type=submit].twitter {
   background: #5ea9dd;
 }
+
 button.twitter:after,
 input[type=submit].twitter:after {
   background: #2c8dd0;
 }
+
 .store-selector {
   background: #fff;
   max-width: 500px;
   margin: 50px auto;
   padding: 2rem;
-  border: 2px solid #000;
+  border: 2px solid var(--color-gray-300);
 }
+
 .store-selector input,
 .store-selector button {
   width: 100%;
 }
+
 .store-selector input[type="text"],
 .store-selector button[type="text"] {
   text-align: center;
