--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,6 +99,12 @@ p, h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
+.order-wrap h2 {
+  color: var(--color-gray-1000);
+  background: var(--color-gray-800);
+  border: 4px solid var(--color-gray-100);
+}
+
 .count-enter {
   transform: translateY(100%) !important;
   transition: 0.5s;
@@ -440,8 +446,8 @@ header.top h3:after {
   position: relative;
   border: 4px solid var(--color-gray-100);
   /* background: var(--color-gray-800); */
-  color: var(--color-gray-1000);
-  background: var(--color-gray-800);
+  color: var(--color-gray-900);
+  background: var(--color-gray-600);
   transition: all 0.3s;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   overflow: scroll;
@@ -464,6 +470,12 @@ header.top h3:after {
   flex-shrink: 1;
   flex-basis: 50%;
   transform: translateX(-50%) rotateY(10deg) translateX(50%) scale(1.08) translateX(24px);
+}
+
+.inventory h2 {
+  color: var(--color-gray-1000);
+  background: var(--color-gray-800);
+  border: 4px solid var(--color-gray-100);
 }
 
 input#fold:not(:checked)~#main .catch-of-the-day>* {
@@ -555,7 +567,7 @@ ul.order li span.count span {
 .fish-edit {
   margin-bottom: 20px;
   border: 2px solid var(--color-gray-300);
-  background: var(--color-gray-900);
+  background: var(--color-gray-900) !important;
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
